pod-security-vpol/restricted/restrict-seccomp-strict/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-seccomp-strict
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
